--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Marca/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Marca/new.html.twig
@@ -3,6 +3,11 @@
 {% block titulomodulo %}  
     <h1>NUEVA MARCA</h1>
 {% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script type="text/javascript" src="{{ asset('bundles/corresponsalia/Tecnologia/js/effects.js') }}"></script>
+{% endblock %}
     
 {% block body -%}
     {{ parent() }}
@@ -10,7 +15,7 @@
     {% if form_errors(form.nombre)%}
     <div class="alert alert-danger errores" style="width:70%;">
         <div><b>Alerta! Ha ocurrido un error en el formulario:</b><br><br></div>
-        <div>{{ form_errors(form.marca) }}</div>
+        <div>{{ form_errors(form.nombre) }}</div>
     </div>
     {% endif %}
 
@@ -19,7 +24,7 @@
         <div class="formShow" style="width:70%;">
             <div class="contenedorform">
                 <div class="labelform">Nombre:</div>
-                <div class="widgetform">{{ form_widget(form.nombre) }}</div>
+                <div class="widgetform">{{ form_widget(form.nombre, {'attr': {'class': 'strtoupper'} } ) }}</div>
             </div>
         </div>
         
