--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Marca/show.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Marca/show.html.twig
@@ -8,12 +8,8 @@
 
     <div class="formShow" style="width:80%;">
         <div class="contenedorform">
-            <div class="labelform">Id:</div>
-            <div class="widgetform">{{ entity.id }}</div>
-        </div>
-        <div class="contenedorform">
-            <div class="labelform">Id:</div>
-            <div class="widgetform">{{ entity.nombre }}</div>
+            <div class="labelform">Nombre:</div>
+            <div class="widgetform">{{ entity.nombre|capitalize }}</div>
         </div>
     </div>
 
