--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Categoria/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Categoria/index.html.twig
@@ -10,11 +10,23 @@
 {% block body -%}
     {{ parent() }}
     
+    {% for type, flashMessage in app.session.flashbag.all() %}
+        <div class="alert alert-{{ type }} fade in">
+            <button class="close" data-dismiss="alert" type="button">×</button>
+            {% if flashMessage.title is defined %}
+            <strong>{{ flashMessage.title }}</strong>
+            {{ flashMessage.message }}
+            {% else %}
+            {{ type }}
+            {% endif %}
+        </div>
+    {% endfor %}
+    
     <table id="tablalista" class="table table-bordered table-condensed" style="width: 97%;">
         <thead>
             <tr>
-                <th>Nombre</th>
-                <th>Acciones</th>
+                <th>NOMBRE</th>
+                <th>ACCIONES</th>
             </tr>
         </thead>
         <tbody>
@@ -31,7 +43,7 @@
     </table>
 
         <BR><BR><a class="btn btn-primary" href="{{ path('tecnocategoria_new') }}">
-          Nueva Categoria
+          NUEVA CATEGORIA
     </a><br><br>
 
     <script>
