--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Categoria/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Categoria/new.html.twig
@@ -11,7 +11,7 @@
 
 {% block body -%}
     {{ parent() }}
-
+    
     {% if form_errors(form.nombre)%}
     <div class="alert alert-danger errores" style="width:70%;">
         <div><b>Alerta! Ha ocurrido un error en el formulario:</b><br><br></div>
@@ -23,13 +23,13 @@
         {{ form_widget(form._token) }}
         <div class="formShow" style="width:70%;">
             <div class="contenedorform">
-                <div class="labelform">Nombre Categoria:</div>
+                <div class="labelform">Nombre:</div>
                 <div class="widgetform">{{ form_widget(form.nombre, {'attr': {'class': 'strtoupper'} } ) }}</div>
             </div>
         </div>
         
-        <input type="submit" value="Guardar" class="btn btn-primary"> | 
-        <a class="btn btn-default" href="{{ path('tecnocategoria') }}">Listado</a>
+        <input type="submit" value="GUARDAR" class="btn btn-primary"> | 
+        <a class="btn btn-default" href="{{ path('tecnocategoria') }}">IR AL LISTADO</a>
     </form>
 
 
