--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Modelo/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Modelo/index.html.twig
@@ -21,8 +21,8 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td class="indentar_texto_tabular">{{ entity.marca }}</td>
-                <td class="indentar_texto_tabular">{{ entity.nombre }}</td>
+                <td class="indentar_texto_tabular">{{ entity.marca|capitalize }}</td>
+                <td class="indentar_texto_tabular">{{ entity.nombre|capitalize }}</td>
                 <td>
                     <a class="indentar_enlace" href="{{ path('tecnomodelo_show', { 'id': entity.id }) }}"><b class="glyphicon glyphicon-eye-open"></b></a>
                     <a class="indentar_enlace" href="{{ path('tecnomodelo_edit', { 'id': entity.id }) }}"><b class="glyphicon glyphicon-edit"></b></a>
