--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Bitacora/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Bitacora/index.html.twig
@@ -59,7 +59,7 @@
                 </td>
                 <td>
                     {% if entity|length > 9 %}
-                        {{ entity.statusAsignacion.nombre }}
+                        {{ entity.statusAsignacion }}
                     {% endif %}
                 </td>
                 <td>{% if entity|length > 9 %}{{ entity.corresponsalia.nombre }}{% endif %}</td>
