--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Bitacora/show.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Bitacora/show.html.twig
@@ -22,7 +22,7 @@
         </table>
         <div class="contenedorform">
             <div class="labelform">Tipo de Asignacion:</div>
-            <div class="widgetform">{{ asignacion.statusId }}</div>
+            <div class="widgetform">{{ asignacion.status }}</div>
         </div>
         <div class="contenedorform">
             <div class="labelform">Corresponsalia:</div>
