--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/new.html.twig
@@ -101,7 +101,7 @@
             </div>
             <div class="contenedorform">
                 <div class="labelform">Condicion:</div>
-                <div class="widgetform">{{ form_widget(form.condicion) }}</div>
+                <div class="widgetform">{{ form_widget(form.condicion, {'attr': {'class': 'autocomplete_select'} }) }}</div>
             </div>
         </div>
         
