--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/edit.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/edit.html.twig
@@ -1,6 +1,18 @@
 {% extends '::base.html.twig' %}
 
 {% block titulomodulo %}<h1>EDITAR EQUIPO</h1>{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link href="{{ asset('bundles/corresponsalia/Tecnologia/css/equipo.css') }}" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="{{ asset('bundles/corresponsalia/Tecnologia/libs/select2/select2.css') }}"/>
+    <style type="text/css">
+        .select2-container .select2-choice > .select2-chosen {
+            min-width: 200px !important;
+        }
+    </style>
+{% endblock %}  
+
 {% block javascripts %}
     {{ parent() }}
     <script type="text/javascript">
@@ -35,12 +47,14 @@
     </script>
     <script type="text/javascript" src="{{ asset('bundles/corresponsalia/Tecnologia/js/Jdatepicker.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/corresponsalia/Tecnologia/js/equipo_new.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/corresponsalia/Tecnologia/js/effects.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/corresponsalia/Tecnologia/libs/select2/select2.min.js') }}"></script>
+    <script type="text/javascript">
+        jQuery(document).ready(function() { jQuery(".autocomplete_select").select2(); });
+    </script>
 {% endblock %}
 
-{% block stylesheets %}
-    {{ parent() }}
-    <link href="{{ asset('bundles/corresponsalia/Tecnologia/css/equipo.css') }}" rel="stylesheet" type="text/css" />
-{% endblock %}
+
 {% block body -%}
     {{ parent() }}
 
@@ -55,23 +69,23 @@
          <div id="wrapper-form" class="formShow" style="width:70%;">
              <div class="contenedorform">
                 <div class="labelform">Categoria:</div>
-                <div class="widgetform">{{ form_widget(edit_form.categoria) }}</div>
+                <div class="widgetform">{{ form_widget(edit_form.categoria, {'attr': {'class': 'autocomplete_select'} }) }}</div>
             </div>
             <div class="contenedorform">
                 <div class="labelform">Marca:</div>
-                <div class="widgetform">{{ form_widget(edit_form.marca) }}</div>
+                <div class="widgetform">{{ form_widget(edit_form.marca, {'attr': {'class': 'autocomplete_select'} }) }}</div>
             </div>
             <div class="contenedorform">
                 <div class="labelform">modelo:</div>
-                <div class="widgetform">{{ form_widget(edit_form.modelo) }}</div>
+                <div class="widgetform">{{ form_widget(edit_form.modelo, {'attr': {'class': 'autocomplete_select'} }) }}</div>
             </div>
             <div class="contenedorform">
                 <div class="labelform">serial Equipo:</div>
-                <div class="widgetform">{{ form_widget(edit_form.serialEquipo) }}</div>
+                <div class="widgetform">{{ form_widget(edit_form.serialEquipo, {'attr': {'class': 'strtoupper'} }) }}</div>
             </div>
             <div class="contenedorform">
                 <div class="labelform">descripcion:</div>
-                <div class="widgetform">{{ form_widget(edit_form.descripcion) }}</div>
+                <div class="widgetform">{{ form_widget(edit_form.descripcion, {'attr': {'class': 'strtoupper'} }) }}</div>
             </div>
             <div class="contenedorform">
                 <div class="labelform">fecha Adquisicion:</div>
@@ -79,7 +93,7 @@
             </div>
             <div class="contenedorform">
                 <div class="labelform">Condicion:</div>
-                <div class="widgetform">{{ form_widget(edit_form.condicion) }}</div>
+                <div class="widgetform">{{ form_widget(edit_form.condicion, {'attr': {'class': 'autocomplete_select'} }) }}</div>
             </div>
             {% if entity.observacionCondicion|length > 0 %}
                 <div id="observcondicion" class="contenedorform">
