--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Estadofondo/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Estadofondo/new.html.twig
@@ -55,7 +55,8 @@
             </div>
             <div class="contenedorform">
                 <div class="labelform">Saldo inicial:</div>
-                <div class="widgetform">{{ form_widget(form.saldoinicial,{'attr':{'value':saldoinicial,'readonly':'readonly'}}) }}</div>
+                <div class="widgetform">{{saldoinicial}}</div>
+                <div style="display:none">{{ form_widget(form.saldoinicial,{'attr':{'value':saldoinicial,'readonly':'readonly'}}) }}</div>
             </div>
             <div class="contenedorform">
                 <div class="labelform">Recurso enviado:</div>
