--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Asignacion/show.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Asignacion/show.html.twig
@@ -4,6 +4,19 @@
 
 {% block body -%}
     {{ parent() }}
+    
+    {% for type, flashMessage in app.session.flashbag.all() %}
+        <div class="alert alert-{{ type }} fade in">
+            <button class="close" data-dismiss="alert" type="button">×</button>
+            {% if flashMessage.title is defined %}
+            <strong>{{ flashMessage.title }}</strong>
+            {{ flashMessage.message }}
+            {% else %}
+            {{ type }}
+            {% endif %}
+        </div>
+    {% endfor %}
+    
     <div class="formShow" style="width:80%;">
         <table class='table table-condensed table-bordered table-striped'>
             <caption>Datos Generales del Equipo</caption>
