--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Modelo/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Modelo/new.html.twig
@@ -26,9 +26,10 @@
 {% block body -%}
     {{ parent() }}
 
-    {% if form_errors(form.nombre)%}
+    {% if form_errors(form.nombre) or form_errors(form.marca)%}
     <div class="alert alert-danger errores" style="width:70%;">
         <div><b>Alerta! Ha ocurrido un error en el formulario:</b><br><br></div>
+        <div>{{ form_errors(form.marca) }}</div>
         <div>{{ form_errors(form.nombre) }}</div>
     </div>
     {% endif %}
