--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Asignacion/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Asignacion/index.html.twig
@@ -1,6 +1,19 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
+    
+    {% for type, flashMessage in app.session.flashbag.all() %}
+        <div class="alert alert-{{ type }} fade in">
+            <button class="close" data-dismiss="alert" type="button">×</button>
+            {% if flashMessage.title is defined %}
+            <strong>{{ flashMessage.title }}</strong>
+            {{ flashMessage.message }}
+            {% else %}
+            {{ type }}
+            {% endif %}
+        </div>
+    {% endfor %}
+    
     <h1>Tecnologia\Asignacion list</h1>
 
     <table class="records_list">
