--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/new.html.twig
@@ -62,13 +62,13 @@
     {% if form_errors(form.categoria) or form_errors(form.marca) or form_errors(form.modelo) or form_errors(form.serialEquipo) or form_errors(form.descripcion) or form_errors(form.fechaAdquisicion) or form_errors(form.condicion)%}
     <div class="alert alert-danger errores" style="width:70%;">
         <div><b>Alerta! Ha ocurrido un error en el formulario:</b><br><br></div>
-        <div>Categoria: {{ form_errors(form.categoria) }}</div>
-        <div>Marca: {{ form_errors(form.marca) }}</div>
-        <div>Modelo: {{ form_errors(form.modelo) }}</div>
-        <div>Serial: {{ form_errors(form.serialEquipo) }}</div>
-        <div>Descripcion: {{ form_errors(form.descripcion) }}</div>
-        <div>Fecha: {{ form_errors(form.fechaAdquisicion) }}</div>
-        <div>Condicion: {{ form_errors(form.condicion) }}</div>
+        <div>{{ form_errors(form.categoria) }}</div>
+        <div>{{ form_errors(form.marca) }}</div>
+        <div>{{ form_errors(form.modelo) }}</div>
+        <div>{{ form_errors(form.serialEquipo) }}</div>
+        <div>{{ form_errors(form.descripcion) }}</div>
+        <div>{{ form_errors(form.fechaAdquisicion) }}</div>
+        <div>{{ form_errors(form.condicion) }}</div>
     </div>
     {% endif %}
 
@@ -88,7 +88,7 @@
                 <div class="widgetform">{{ form_widget(form.modelo, {'attr': {'class': 'autocomplete_select'} }) }}</div>
             </div>
             <div class="contenedorform">
-                <div class="labelform">serial Equipo:</div>
+                <div class="labelform">Serial:</div>
                 <div class="widgetform">{{ form_widget(form.serialEquipo, {'attr': {'class': 'strtoupper'} }) }}</div>
             </div>
             <div class="contenedorform">
