--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Modelo/edit.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Modelo/edit.html.twig
@@ -23,6 +23,18 @@
 
 {% block body -%}
     {{ parent() }}
+    
+    {% for type, flashMessage in app.session.flashbag.all() %}
+        <div class="alert alert-{{ type }} fade in">
+            <button class="close" data-dismiss="alert" type="button">×</button>
+            {% if flashMessage.title is defined %}
+            <strong>{{ flashMessage.title }}</strong>
+            {{ flashMessage.message }}
+            {% else %}
+            {{ type }}
+            {% endif %}
+        </div>
+    {% endfor %}
 
     {% if form_errors(edit_form.nombre)%}
     <div class="alert alert-danger errores" style="width:70%;">
