cambio de jefe en excel

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Corresponsalia/show.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Corresponsalia/show.html.twig
@@ -33,6 +33,10 @@
             <div class="labelform">Tipo moneda:</div>
             <div class="widgetform">{{ entity.tipomoneda|capitalize }}</div>
         </div>    
+        <div class="contenedorform">
+            <div class="labelform">Analista encargado(a):</div>
+            <div class="widgetform">{{ entity.analistaencargado|capitalize }}</div>
+        </div>   
     </div>
     
         <a class="btn btn-default" href="{{ path('corresponsalia') }}">IR AL LISTADO</a> | 
