--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Corresponsalia/edit.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Corresponsalia/edit.html.twig
@@ -5,13 +5,14 @@
 
     <h1>EDITAR CORRESPONSALÍA</h1>
 
-    {% if form_errors(edit_form.nombre)  or form_errors(edit_form.pais) or form_errors(edit_form.tipocorresponsalia) or form_errors(edit_form.tipomoneda)%}
+    {% if form_errors(edit_form.nombre)  or form_errors(edit_form.pais) or form_errors(edit_form.tipocorresponsalia) or form_errors(edit_form.tipomoneda) or form_errors(edit_form.analistaencargado)%}
     <div class="alert alert-danger errores" style="width:70%;">
         <div><b>Alerta! Ha ocurrido un error en el formulario:</b><br><br></div>
         <div>{{ form_errors(edit_form.nombre) }}</div>
         <div>{{ form_errors(edit_form.pais) }}</div>
         <div>{{ form_errors(edit_form.tipocorresponsalia) }}</div>
         <div>{{ form_errors(edit_form.tipomoneda) }}</div>
+        <div>{{ form_errors(edit_form.analistaencargado) }}</div>
     </div>
     {% endif %}
     
@@ -34,6 +35,10 @@
             <div class="contenedorform">
                 <div class="labelform">Tipo moneda:</div>
                 <div class="widgetform">{{ form_widget(edit_form.tipomoneda) }}</div>
+            </div>
+            <div class="contenedorform">
+                <div class="labelform">Analista encargado(a):</div>
+                <div class="widgetform">{{ form_widget(edit_form.analistaencargado) }}</div>
             </div>
         </div>
         <input type="submit" value="EDITAR" class="btn btn-primary"> | 
