--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Corresponsalia/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Corresponsalia/new.html.twig
@@ -4,13 +4,14 @@
     {{ parent() }}
     <h1>NUEVA CORRESPONSALÍA</h1>
 
-    {% if form_errors(form.nombre)  or form_errors(form.pais) or form_errors(form.tipocorresponsalia) or form_errors(form.tipomoneda)%}
+    {% if form_errors(form.nombre)  or form_errors(form.pais) or form_errors(form.tipocorresponsalia) or form_errors(form.tipomoneda) or form_errors(form.analistaencargado)%}
     <div class="alert alert-danger errores" style="width:70%;">
         <div><b>Alerta! Ha ocurrido un error en el formulario:</b><br><br></div>
         <div>{{ form_errors(form.nombre) }}</div>
         <div>{{ form_errors(form.pais) }}</div>
         <div>{{ form_errors(form.tipocorresponsalia) }}</div>
         <div>{{ form_errors(form.tipomoneda) }}</div>
+        <div>{{ form_errors(form.analistaencargado) }}</div>
     </div>
     {% endif %}
     
@@ -32,6 +33,10 @@
             <div class="contenedorform">
                 <div class="labelform">Tipo moneda:</div>
                 <div class="widgetform">{{ form_widget(form.tipomoneda) }}</div>
+            </div>
+            <div class="contenedorform">
+                <div class="labelform">Analista encargado(a):</div>
+                <div class="widgetform">{{ form_widget(form.analistaencargado) }}</div>
             </div>
         </div>
     
